--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<button onclick="playMusic()">Play Music</button>
+<button onclick="playMusic()" style="font-size: 48px; padding: 20px 40px; font-weight: bold;">
+  Play Music
+</button>
 
 <audio id="bg-music" src="Music.mp3" loop></audio>
 
@@ -301,3 +303,4 @@ will save you..</span></div></div></div></div></div>
 </div>
 <div class=postamble><div class=postamble__entry>Exported 507 message(s)</div><div class=postamble__entry>Timezone: UTC+2</div></div>
 >
+
