--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <button onclick="playMusic()" style="font-size: 48px; padding: 20px 40px; font-weight: bold;">
-  Play Music
+  Click here to play amazing music while scrolling!
 </button>
 
 <audio id="bg-music" src="Music.mp3" loop></audio>
@@ -303,4 +303,5 @@ will save you..</span></div></div></div></div></div>
 </div>
 <div class=postamble><div class=postamble__entry>Exported 507 message(s)</div><div class=postamble__entry>Timezone: UTC+2</div></div>
 >
+
 
